Change ItemNo to long

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
@@ -9,10 +9,10 @@
     "Permission:Delete": "Delete",
     "Menu:Item": "MenuItem",
     "Item": "Item",
-    "ItemItemId": "ItemItemId",
-    "ItemItemNo": "ItemItemNo",
-    "ItemItemName": "ItemItemName",
-    "ItemItemDescription": "ItemItemDescription",
+    "ItemId": "ItemId",
+    "ItemNo": "ItemNo",
+    "ItemName": "ItemName",
+    "ItemDescription": "ItemDescription",
     "ItemSellingPrice": "ItemSellingPrice",
     "ItemSalesAccount": "ItemSalesAccount",
     "ItemReturnable": "ItemReturnable",
@@ -50,8 +50,8 @@
     "ItemOpeningStockValue": "ItemOpeningStockValue",
     "ItemStockOnHand": "ItemStockOnHand",
     "ItemIsComboProduct": "ItemIsComboProduct",
-    "ItemItemType": "ItemItemType",
-    "ItemItemCategory": "ItemItemCategory",
+    "ItemType": "ItemType",
+    "ItemCategory": "ItemCategory",
     "ItemCustomeField1Name": "ItemCustomeField1Name",
     "ItemCustomeField1Value": "ItemCustomeField1Value",
     "ItemCustomeField2Name": "ItemCustomeField2Name",
