Commit for Item add/update page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -18,6 +18,7 @@
     "Permission:LogisticsSetting": "Logistics Setting",
     "Permission:TenentList": "Tenent List",
     "Permission:TenentBillReport": "Tenent List Billing",
-    "Permission:PermissionSetting": "Permission Setting"
+    "Permission:PermissionSetting": "Permission Setting",
+    "NewItem": "New Item"
   }
 }
