prepare item related entity

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
@@ -49,7 +49,7 @@
     "ItemOpeningStock": "ItemOpeningStock",
     "ItemOpeningStockValue": "ItemOpeningStockValue",
     "ItemStockOnHand": "ItemStockOnHand",
-    "ItemIsComboProduct": "ItemIsComboProduct",
+    "ItemIsGroupProduct": "ItemIsComboProduct",
     "ItemType": "ItemType",
     "ItemCategory": "ItemCategory",
     "ItemCustomeField1Name": "ItemCustomeField1Name",
