try to add itemDetail datatable

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/tr.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/tr.json
@@ -3,6 +3,38 @@
   "texts": {
     "Menu:Home": "Ana sayfa",
     "Welcome": "Hoşgeldiniz",
-    "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz."
+    "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz.",
+    "Menu:ItemDetails": "MenuItemDetails",
+    "ItemDetails": "ItemDetails",
+    "ItemDetailsItem": "ItemDetailsItem",
+    "ItemDetailsItemDetailTitle": "ItemDetailsItemDetailTitle",
+    "ItemDetailsItemDetailStatus": "ItemDetailsItemDetailStatus",
+    "ItemDetailsItemDetailDescription": "ItemDetailsItemDetailDescription",
+    "ItemDetailsProperty1": "ItemDetailsProperty1",
+    "ItemDetailsProperty2": "ItemDetailsProperty2",
+    "ItemDetailsProperty3": "ItemDetailsProperty3",
+    "ItemDetailsSellingPrice": "ItemDetailsSellingPrice",
+    "ItemDetailsGroupBuyPrice": "ItemDetailsGroupBuyPrice",
+    "ItemDetailsSaleableQuantity": "ItemDetailsSaleableQuantity",
+    "ItemDetailsPreOrderableQuantity": "ItemDetailsPreOrderableQuantity",
+    "ItemDetailsSaleablePreOrderQuantity": "ItemDetailsSaleablePreOrderQuantity",
+    "ItemDetailsSKU": "ItemDetailsSKU",
+    "ItemDetailsReorderLevel": "ItemDetailsReorderLevel",
+    "ItemDetailsWarehouseName": "ItemDetailsWarehouseName",
+    "ItemDetailsInventoryAccount": "ItemDetailsInventoryAccount",
+    "ItemDetailsOpeningStock": "ItemDetailsOpeningStock",
+    "ItemDetailsOpeningStockValue": "ItemDetailsOpeningStockValue",
+    "ItemDetailsPurchasePrice": "ItemDetailsPurchasePrice",
+    "ItemDetailsPurchaseAccount": "ItemDetailsPurchaseAccount",
+    "ItemDetailsPurchaseDescription": "ItemDetailsPurchaseDescription",
+    "ItemDetailsPreferredVendor": "ItemDetailsPreferredVendor",
+    "ItemDetailsStockOnHand": "ItemDetailsStockOnHand",
+    "ItemDetailsPartNumber": "ItemDetailsPartNumber",
+    "ItemDetailsItemType": "ItemDetailsItemType",
+    "CreateItemDetails": "CreateItemDetails",
+    "EditItemDetails": "EditItemDetails",
+    "ItemDetailsDeletionConfirmationMessage": "Are you sure to delete the itemDetails {0}?",
+    "SuccessfullyDeleted": "Successfully deleted",
+    "TableFilter": "TableFilter"
   }
 }
