Setup SetItem entity

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/ar.json
@@ -76,6 +76,44 @@
     "EditItem": "EditItem",
     "ItemDeletionConfirmationMessage": "Are you sure to delete the item {0}?",
     "SuccessfullyDeleted": "Successfully deleted",
-    "TableFilter": "TableFilter"
+    "TableFilter": "TableFilter",
+    "Permission:SetItem": "SetItem",
+    "Menu:SetItem": "MenuSetItem",
+    "SetItem": "SetItem",
+    "SetItemSetItemName": "SetItemSetItemName",
+    "SetItemSetItemNo": "SetItemSetItemNo",
+    "SetItemSetItemDescriptionTitle": "SetItemSetItemDescriptionTitle",
+    "SetItemDescription": "SetItemDescription",
+    "SetItemSetItemMainImageURL": "SetItemSetItemMainImageURL",
+    "SetItemSetItemStatus": "SetItemSetItemStatus",
+    "SetItemSetItemSaleableQuantity": "SetItemSetItemSaleableQuantity",
+    "SetItemSellingPrice": "SetItemSellingPrice",
+    "SetItemGroupBuyPrice": "SetItemGroupBuyPrice",
+    "SetItemSaleableQuantity": "SetItemSaleableQuantity",
+    "SetItemPreOrderableQuantity": "SetItemPreOrderableQuantity",
+    "SetItemSaleablePreOrderQuantity": "SetItemSaleablePreOrderQuantity",
+    "SetItemSalesAccount": "SetItemSalesAccount",
+    "SetItemReturnable": "SetItemReturnable",
+    "SetItemLimitAvaliableTimeStart": "SetItemLimitAvaliableTimeStart",
+    "SetItemLimitAvaliableTimeEnd": "SetItemLimitAvaliableTimeEnd",
+    "SetItemShareProfit": "SetItemShareProfit",
+    "SetItemisFreeShipping": "SetItemisFreeShipping",
+    "SetItemTaxName": "SetItemTaxName",
+    "SetItemTaxPercentage": "SetItemTaxPercentage",
+    "SetItemTaxType": "SetItemTaxType",
+    "SetItemItemCategory": "SetItemItemCategory",
+    "CreateSetItem": "CreateSetItem",
+    "EditSetItem": "EditSetItem",
+    "SetItemDeletionConfirmationMessage": "Are you sure to delete the setItem {0}?",
+    "SetItemSetItemDetails": "SetItemSetItemDetails",
+    "Permission:SetItemDetails": "SetItemDetails",
+    "Menu:SetItemDetails": "MenuSetItemDetails",
+    "SetItemDetails": "SetItemDetails",
+    "SetItemDetailsSetItemId": "SetItemDetailsSetItemId",
+    "SetItemDetailsSetItem": "SetItemDetailsSetItem",
+    "SetItemDetailsItem": "SetItemDetailsItem",
+    "CreateSetItemDetails": "CreateSetItemDetails",
+    "EditSetItemDetails": "EditSetItemDetails",
+    "SetItemDetailsDeletionConfirmationMessage": "Are you sure to delete the setItemDetails {0}?"
   }
 }
