Commit for Item List UI

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -19,6 +19,10 @@
     "Permission:TenentList": "Tenent List",
     "Permission:TenentBillReport": "Tenent List Billing",
     "Permission:PermissionSetting": "Permission Setting",
-    "NewItem": "New Item"
+    "NewItem": "New Item",
+    "Items": "Item List View",
+    "CopyItem": "Copy Item",
+    "DeleteItem": "Delete Item",
+    "TurnItemOn": "Turn Item On"
   }
 }
