Commit For Item List

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -19,6 +19,7 @@
     "Permission:TenentList": "Tenent List",
     "Permission:TenentBillReport": "Tenent List Billing",
     "Permission:PermissionSetting": "Permission Setting",
+    "CreatedTime": "Created  Time",
 
     //items
     "NewItem": "New Item",
