--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -20,6 +20,10 @@
     "Permission:TenentBillReport": "Tenent List Billing",
     "Permission:PermissionSetting": "Permission Setting",
     "CreatedTime": "Created  Time",
+    "Cancel": "Cancel",
+    "Preview": "Preview",
+    "Save": "Save",
+    "Upload": "Upload",
 
     //items
     "NewItem": "New Item",
@@ -52,6 +56,7 @@
     "ShareProfit": "Share Profit",
     "FreeShipping": "Free Shipping",
     "ShippingMethod": "Shipping Method",
-    "TaxType": "Tax Type"
+    "TaxType": "Tax Type",
+    "NewTag": "New Tag"
   }
 }
