Create Item UI Done

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -45,9 +45,11 @@
     "PriceAndInventory": "Price And Inventory",
     "SKU": "SKU",
     "SellPrice": "Sell Price",
-    "GroupByPrice": "GroupBy Price",
-    "SellableQuantity": "Sellable Quantity",
-    "SellablePreorderQuantity": "Sellable Preorder Quantityy",
+    "InventoryAccount": "Inventory",
+    "GroupBuyPrice": "Group Buy Price",
+    "SaleableQuantity": "Saleable Quantity",
+    "SaleablePreorderQuantity": "Saleable Preorder Quantityy",
+    "PreorderQuantity": "Preorder Quantityy",
     "CommodityAttributes": "Commodity Attributes",
     "TimeLimitPeriod": "Time Limit Period",
     "StartDate": "Start Date",
@@ -55,6 +57,7 @@
     "LimitQuantity": "Limit Quantity",
     "ShareProfit": "Share Profit",
     "FreeShipping": "Free Shipping",
+    "Returnable": "Returnable",
     "ShippingMethod": "Shipping Method",
     "TaxType": "Tax Type",
     "NewTag": "New Tag"
