--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -59,6 +59,7 @@
     "FreeShipping": "Free Shipping",
     "Returnable": "Returnable",
     "ShippingMethod": "Shipping Method",
+    "SalePrice": "Sale Price",
     "TaxType": "Tax Type",
     "NewTag": "New Tag"
   }
