Fixes for create Item

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -48,8 +48,8 @@
     "InventoryAccount": "Inventory",
     "GroupBuyPrice": "Group Buy Price",
     "SaleableQuantity": "Saleable Quantity",
-    "SaleablePreorderQuantity": "Saleable Preorder Quantityy",
-    "PreorderQuantity": "Preorder Quantityy",
+    "SaleablePreorderQuantity": "Saleable Preorder Quantity",
+    "PreorderQuantity": "Preorder Quantity",
     "CommodityAttributes": "Commodity Attributes",
     "TimeLimitPeriod": "Time Limit Period",
     "StartDate": "Start Date",
