AttributeNames and Values in Item

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -63,10 +63,14 @@
     "TaxType": "Tax Type",
     "NewTag": "New Tag",
     "SellingPrice": "Selling Price",
-    "Pikachu:00001": "Item Name Can not be null",
-    "Pikachu:00002": "Item with same name '{name}' already exists",
-    "Pikachu:00003": "Item Details can not be empty",
-    "Pikachu:00004": "Item with same '{SKU}' already exists",
+    "Pikachu:ItemNameCannotBeNull": "Item Name Can not be null",
+    "Pikachu:ItemWithSameNameAlreadyExists": "Item with same Name already exists",
+    "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
+    "Pikachu:ItemWithSKUAlreadyExists": "Item with same SKU already exists",
+    "Pikachu:SKUForItemDetailsCannotBeNull": "SKU for Item Detail Cannot be null",
+    "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items should be greater than 0",
+    "CopyToAll": "Copy To All",
+    "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
     //GroupBuy
     "NewGroupBuy": "New GroupBuy",
     "SalesURL1": "Sales URL1",
