Generate SKU in progress

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -71,6 +71,20 @@
     "Pikachu:SellingPriceForItemShouldBeGreaterThanZero": "Selling Price for Items should be greater than 0",
     "CopyToAll": "Copy To All",
     "SystemIsUnableToCopyAtTheMoment": "System is Unable to Copy at the moment",
+    "GenerateSKU": "Generate SKU",
+    "SKUPreview": "SKU Preview",
+    "SeparatedBy": "Separated By",
+    "CaseUsed": "Case Used",
+    "UpperCase": "Upper Case",
+    "LowerCase": "Lower Case",
+    "ConfigureYourSKUPattern": "Configure Your SKU Pattern",
+    "ConfigureYourSKUPatternMessage": "Select the attributes with which you want to construct the SKU for this item group.",
+    "SampleValue": "Sample Value",
+    "Show": "Show",
+    "First": "First",
+    "Last": "Last",
+    "Letters": "Letters",
+
     //GroupBuy
     "NewGroupBuy": "New GroupBuy",
     "SalesURL1": "Sales URL1",
