image blob name issue fix

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -24,6 +24,7 @@
     "Preview": "Preview",
     "Save": "Save",
     "Upload": "Upload",
+    "SelectAll": "Select All",
 
     //items
     "NewItem": "New Item",
