changes in the group buy database design

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -65,6 +65,7 @@
     "NewTag": "New Tag",
     "SellingPrice": "Selling Price",
     "Pikachu:ItemNameCannotBeNull": "Item Name Can not be null",
+    "Pikachu:GroupBuyNameCannotBeNull": "Group Buy Name Can not be null",
     "Pikachu:ItemWithSameNameAlreadyExists": "Item with same Name already exists",
     "Pikachu:ItemDetailsCannotBeEmpty": "Item Details can not be empty",
     "Pikachu:ItemWithSKUAlreadyExists": "Item with same SKU already exists",
