create group buy finalized

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -98,6 +98,7 @@
     "NewSetItem": "New Set Item",
     "NotFound": "Not Found",
     "EditSetItem": "Edit Set Item",
+    "Pikachu:EntityWithGivenIdDoesnotExist": "Entity With Given Id Does not Exist",
 
     //GroupBuy
     "NewGroupBuy": "New GroupBuy",
