delete freebie implementation

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -101,24 +101,39 @@
     "Pikachu:EntityWithGivenIdDoesnotExist": "Entity With Given Id Does not Exist",
 
     //GroupBuy
-    "NewGroupBuy": "New GroupBuy",
-    "SalesURL1": "Sales URL1",
-    "SalesURL2": "Sales URL2",
-    "GroupBuyName": "GroupBuy Name",
+    "NewGroupBuy": "New Group Buy",
+    "EditGroupBuy": "Edit Group Buy",
+    "SalesURL1": "Sales URL 1",
+    "SalesURL2": "Sales URL 2",
+    "GroupBuyName": "Group Buy Name",
     "Subject": "Subject",
     "GroupBuyShortName": "Short Name",
     "GroupBuyLogo": "Logo",
     "GroupBuyBanner": "Banner Image",
     "CarouselImages": "Carousel Images",
-    "GroupBuyTime": "GroupBuy Time",
+    "GroupBuyTime": "Group Buy Time",
     "Logistic": "Logistic",
     "ExcludeShippingMethod": "Exclude Shipping Method",
     "AllowShipToOuterIsland": "Allow Ship To Outer Island",
     "AllowShipToOverSea": "Allow ShipTo Oversea",
     "ExpectDeliveryDate": "Expect Delivery Date",
+    "Invoice": "Invoice",
+    "IssueInvoice": "Issue Invoice",
+    "AutoIssueTriplicateInvoice": "Auto Issue Triplecate Invoice",
+    "InvoiceComment": "Invoice Comment",
+    "AdvanceSetting": "Advance Settings",
+    "HideCredention": "Hide Credention",
+    "InviteCode": "Invite Code",
+    "ProfitShare": "Profit Share",
     "GateWay": "GateWay",
     "PaymentMethod": "Payment Method",
-    "DefaultPaymentGateWay": "DefaultPaymentGateWay",
+    "GroupBuyPolicy": "Group Buy Policy",
+    "GroupBuyCondition": "Group Buy Condition",
+    "CustomerInformation": "Customer Information",
+    "ExchangePolicy": "Exchange Policy",
+    "NotifyEmail": "Notify Email",
+    "AddModule": "Add Module",
+    "DefaultPaymentGateWay": "Default Payment GateWay",
     "ProductImage": "Product Image",
     "SelectItem": "Select Item",
     "ProductDescription": "Product Description",
@@ -132,6 +147,7 @@
 
     //Freebie
     "NewFreebie": "New Freebie",
+    "EditFreebie": "Edit Freebie",
     "ItemImages": "Item Images",
     "ChooseGroupBuy": "Choose Group Buy",
     "ApplyToAllGroupBuys": "Apply To All Group Buys",
