controllers and data fetch methods for store front

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -39,6 +39,7 @@
 
     //items
     "NewItem": "New Item",
+    "EditItem": "Edit Item",
     "Items": "Item List View",
     "CopyItem": "Copy Item",
     "DeleteItem": "Delete Item",
