groupbuy create module changes

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -151,6 +151,7 @@
     "ProductDescription": "Product Description",
     "ProductGroup": "Product Group",
     "SelectModule": "Select Module",
+    "Pikachu:GroupBuyModuleCannotBeEmpty": "Group Buy Module Can Not Be Empty",
 
     //SetItem
     "SetItem": "Set Item",
