--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -155,6 +155,7 @@
     "Pikachu:GroupBuyModuleCannotBeEmpty": "Group Buy Module Can Not Be Empty",
     "Gateway": "Gateway",
     "InvalidFileType": "Invalid File Type",
+    "Pikachu:CanNotAddMoreThan20Modules": "Can not add more than 20 modules",
 
     //SetItem
     "SetItem": "Set Item",
