created orders list page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -187,6 +187,11 @@
     "Pikachu:SelectAtLeastOneImage": "Please Select at least one Image",
     "ActivityTimePeriod": "Activity Time Period",
     "Pikachu:InvalidItemName": "Item Name Is Invalid",
-    "Pikachu:FreebieWithSameNameAlreadyExists": "Freebie with same name already exist"
+    "Pikachu:FreebieWithSameNameAlreadyExists": "Freebie with same name already exist",
+
+
+    //Orders
+    "Order": "Orders",
+    "Menu:Orders": "Orders"
   }
 }
