created order details page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -215,6 +215,29 @@
     "CombineItems": "Combine Items",
     "Open": "Open",
     "Closed": "Closed",
-    "Returned": "Returned"
+    "Returned": "Returned",
+    "OrderDetails": "Order Details",
+    "CancelOrder": "Cancel Order",
+    "ExchangeItem": "Exchange Item",
+    "SplitOrder": "Split Order",
+    "Print": "Print",
+    "PrintOrder": "Print Order",
+    "OrderInformation": "Order Information",
+    "TaxNumber": "Tax Number",
+    "InvoiceCarrier": "Invoice Carrier",
+    "ApplyRefund": "Apply Refund",
+    "ShipmentNotify": "Shipment Notify",
+    "Recipient": "Recipient",
+    "RecipientPhoneNumber": "Recipient Phone Number",
+    "RecipientAddress": "Recipient Address",
+    "RecipientComments": "Recipient Comments",
+    "StoreComments": "Store Comments",
+    "StoreCommentsHistory": "Store Comments History",
+    "Total": "Total",
+    "DeliveryFee": "Delivery Fee",
+    "Subtotal": "Sub Total",
+    "SubTotal": "Sub Total",
+    "Permission:Orders": "Orders Management",
+    "Permission:AddStoreComments": "Add Store Comments"
   }
 }
