edit recipient details

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -238,6 +238,6 @@
     "Subtotal": "Sub Total",
     "SubTotal": "Sub Total",
     "Permission:Orders": "Orders Management",
-    "Permission:AddStoreComments": "Add Store Comments"
+    "Permission:AddStoreComments": "Add Store Comments",
   }
 }
