--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -186,6 +186,55 @@
         "Pikachu:SelectAtLeastOneImage": "請至少選擇一個圖像",
         "ActivityTimePeriod": "活動期間",
         "Pikachu:InvalidItemName": "商品名稱無效",
-        "Pikachu:FreebieWithSameNameAlreadyExists": "商品名稱不能重複"
+        "Pikachu:FreebieWithSameNameAlreadyExists": "商品名稱不能重複",
+
+        //Orders
+        "Order": "訂單",
+        "Menu:Orders": "訂單管理",
+        "OrderNo": "訂單號碼",
+        "OrderDate": "訂購日期",
+        "CustomerName": "客戶名稱",
+        "Email": "Email",
+        "OrderStatus": "訂單狀態",
+        "ShippingStatus": "物流狀態",
+        "CheckoutAmount": "結帳金額",
+        "BankTransfer": "銀行轉帳",
+        "CreditCard": "信用卡",
+        "LinePay": "Line Pay",
+        "RecipientInformation": "收貨人資訊",
+        "PickupTheGoodsWithoutPayment": "Pickup The Goods Without Payment",
+        "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
+        "BlackCatHomeDelivery": "黑貓宅急便",
+        "OrderItems": "訂單項目",
+        "Address": "地址",
+        "Remarks": "Remarks",
+        "MerchantRemarks": "商家備註",
+        "CombineItems": "組合商品",
+        "Open": "開啟",
+        "Closed": "關閉",
+        "Returned": "退貨",
+        "OrderDetails": "訂單細項",
+        "CancelOrder": "取消訂單",
+        "ExchangeItem": "換貨",
+        "SplitOrder": "拆單",
+        "Print": "列印",
+        "PrintOrder": "列印訂單",
+        "OrderInformation": "訂購人資訊",
+        "TaxNumber": "統編",
+        "InvoiceCarrier": "載具",
+        "ApplyRefund": "執行退款",
+        "ShipmentNotify": "物流通知",
+        "Recipient": "收貨人",
+        "RecipientPhoneNumber": "收貨人聯絡電話",
+        "RecipientAddress": "收貨人地址",
+        "RecipientComments": "收貨人備註",
+        "StoreComments": "商家備註",
+        "StoreCommentsHistory": "商家備註歷史紀錄",
+        "Total": "總金額",
+        "DeliveryFee": "運費",
+        "Subtotal": "小記",
+        "SubTotal": "小記",
+        "Permission:Orders": "訂單管理",
+        "Permission:AddStoreComments": "新增商家備註"
     }
   }
