create order on ecpay

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -239,5 +239,7 @@
     "SubTotal": "Sub Total",
     "Permission:Orders": "Orders Management",
     "Permission:AddStoreComments": "Add Store Comments",
+    "WaitingForPayment": "Waiting For Payment",
+    "PrepareShipment": "Prepare Shipment"
   }
 }
