--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -157,7 +157,7 @@
     "InvalidFileType": "Invalid File Type",
     "Pikachu:CanNotAddMoreThan20Modules": "Can not add more than 20 modules",
     "GroupBuyList": "Group Buy List",
-
+    
     //SetItem
     "SetItem": "Set Item",
     "AddItem": "Add Item",
@@ -208,6 +208,7 @@
     "PickupTheGoodsWithoutPayment": "Pickup The Goods Without Payment",
     "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
     "BlackCatHomeDelivery": "Black Cat Home Delivery",
+    "HomeDelivery": "Home Delivery",
     "OrderItems": "Order Items",
     "Address": "Address",
     "Remarks": "Remarks",
@@ -240,6 +241,9 @@
     "Permission:Orders": "Orders Management",
     "Permission:AddStoreComments": "Add Store Comments",
     "WaitingForPayment": "Waiting For Payment",
-    "PrepareShipment": "Prepare Shipment"
+    "PrepareShipment": "Prepare Shipment",
+    "PersonalInvoice": "Personal Invoice",
+    "CellphoneInvoice": "Cellphone Invoice",
+    "BusinessInvoice": "Business Invoice"
   }
 }
