--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -147,16 +147,17 @@
     "NotifyEmail": "Notify Email",
     "AddModule": "Add Module",
     "DefaultPaymentGateWay": "Default Payment Gateway",
-    "ProductImage": "Product Image",
+    "ProductImageModule": "Product Image Module",
     "SelectItem": "Select Item",
-    "ProductDescription": "Product Description",
-    "ProductGroup": "Product Group",
+    "ProductDescriptionModule": "Product Description Module",
+    "ProductGroupModule": "Product Group Module",
     "SelectModule": "Select Module",
     "Pikachu:GroupBuyModuleCannotBeEmpty": "Group Buy Module Can Not Be Empty",
     "Gateway": "Gateway",
     "InvalidFileType": "Invalid File Type",
     "Pikachu:CanNotAddMoreThan20Modules": "Can not add more than 20 modules",
     "GroupBuyList": "Group Buy List",
+    "uploadUpto5Images": "Upload upto 5 images",
 
     //SetItem
     "SetItem": "Set Item",
